in student from updated the fee section

--- a/src/PAGES/Pdf_template.html
+++ b/src/PAGES/Pdf_template.html
@@ -133,6 +133,11 @@
                 <td style="font-size: 12px;"><B>PARENT'S / GAURDIAN'S OCCUPATION </B></td>
                 <td id="GuardianOccupation"></td>
             </tr>
+        </table>
+        <br>
+        <h2 style="text-align: center;">SKILL DEVELOPMENT INSTITUTE - VISAKHAPATNAM <br> TRAINEE BIO-DATA</h2>
+        <table>
+            <br>
             <tr>
                 <td style="font-size: 12px;"><B>21</B></td>
                 <td style="font-size: 12px;"><B>PARENT'S / GAURDIAN'S CONTACT No</B></td>
@@ -248,13 +253,13 @@
         </div>
         &nbsp;
         <br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br>
         <h2>
             <ul>
                 <a href="" style="color: black;">Undertaking from Trainee</a>
             </ul>
         </h2>
-        <br><br>
+        <br>
 
         <p style="text-align: right; line-height: 4;"><b>Date: ___________________________</b></p>
         <br>
