--- a/src/PAGES/studentform.html
+++ b/src/PAGES/studentform.html
@@ -310,6 +310,27 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-section">
+                    <div class="section-header">
+                        <h2>Fee</h2>
+                    </div>
+                    <div class="form-grid">
+                        <div class="form-group">
+                            <label for="totalfee">Total Fee*</label>
+                            <input type="text" id="totalfee" name="totalfee" placeholder="Enter TOTAL FEE AMOUNT"
+                                required>
+                            <span class="error" id="totalfeeError"></span>
+                        </div>
+                    </div>
+                    <div class="form-grid">
+                        <div class="form-group">
+                            <label for="discount">Discount*</label>
+                            <input type="text" id="discount" name="discount"
+                                placeholder="Enter TOTAL FEE DISCOUNT APPLIED" required>
+                            <span class="error" id="discountError"></span>
+                        </div>
+                    </div>
+                </div>
 
                 <!-- Form Actions -->
                 <div class="form-actions">
@@ -342,10 +363,6 @@
     </div>
 
     <script src="../JS/studentform.js"></script>
-    <script src="../backend/middleware/tokenvalidity.js"></script>
-</body>
-
-</html>cript>
 </body>
 
 </html>
