updated the code view students

--- a/src/PAGES/addtrainer.html
+++ b/src/PAGES/addtrainer.html
@@ -38,7 +38,7 @@
         </div>
         <div class="submenu students-submenu">
             <a href="studentform.html"><span class="material-icons">add</span> Add Student</a>
-            <a href="#"><span class="material-icons">visibility</span> View Students</a>
+            <a href="viewstudent.html"><span class="material-icons">visibility</span> View Students</a>
         </div>
 
         <div class="dropdown-menu Batches-menu">
