--- a/src/PAGES/dailypayments.html
+++ b/src/PAGES/dailypayments.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/dailypayments.css">
-
+    <script src="../backend/middleware/tokenvalidity.js"></script>
 
 </head>
 
@@ -38,7 +38,7 @@
         </div>
         <div class="submenu students-submenu">
             <a href="studentform.html"><span class="material-icons">group_add</span> Add Student</a>
-            <a href="#"><span class="material-icons">visibility</span> View Students</a>
+            <a href="viewstudent.html"><span class="material-icons">visibility</span> View Students</a>
         </div>
 
         <div class="dropdown-menu Batches-menu">
