updated the code daily transactions

--- a/src/PAGES/addbatch.html
+++ b/src/PAGES/addbatch.html
@@ -71,7 +71,7 @@
 			<a href="dailypayments.html"><span class="material-icons"><span class="material-symbols-outlined">
 						payments
 					</span></span> Batch Payments</a>
-			<a href="#"><span class="material-icons">visibility</span> View Trainers</a>
+			<a href="dailytransactions.html"><span class="material-icons">visibility</span> Daily Payments</a>
 		</div>
 
 		<a href="#"><span class="material-icons">analytics</span> Analytics</a>
