--- a/src/PAGES/dailypayments.html
+++ b/src/PAGES/dailypayments.html
@@ -71,7 +71,7 @@
             <a href="dailypayments.html"><span class="material-icons"><span class="material-symbols-outlined">
                         payments
                     </span></span> Batch Payments</a>
-            <a href="#"><span class="material-icons">visibility</span> View Trainers</a>
+            <a href="dailytransactions.html"><span class="material-icons">visibility</span> Daily Payments</a>
         </div>
 
         <a href="#"><span class="material-icons">analytics</span> Analytics</a>
@@ -98,7 +98,7 @@
                         <th>Batch Code</th>
                         <th>Course</th>
                         <th>Name</th>
-                        <th>Mobile Number</th>
+                        <th>Phone</th>
                         <th>Course Fee</th>
                         <th>Discount Applied</th>
                         <th>Total Fee</th>
@@ -110,7 +110,7 @@
             </table>
         </div>
     </main>
-
+    
     <!-- Modal Styling -->
 
     <script src="../JS/dailypayments.js"></script>
