--- a/src/PAGES/viewstudent.html
+++ b/src/PAGES/viewstudent.html
@@ -38,7 +38,7 @@
 		</div>
 		<div class="submenu students-submenu">
 			<a href="studentform.html"><span class="material-icons">group_add</span> Add Student</a>
-			<a href="#"><span class="material-icons">visibility</span> View Students</a>
+			<a href="viewstudent.html"><span class="material-icons">visibility</span> View Students</a>
 		</div>
 
 		<div class="dropdown-menu Batches-menu">
@@ -71,7 +71,7 @@
 			<a href="dailypayments.html"><span class="material-icons"><span class="material-symbols-outlined">
 						payments
 					</span></span> Batch Payments</a>
-			<a href="#"><span class="material-icons">visibility</span> View Trainers</a>
+			<a href="dailytransactions.html"><span class="material-icons">visibility</span> Daily Payments</a>
 		</div>
 
 		<a href="#"><span class="material-icons">analytics</span> Analytics</a>
@@ -92,11 +92,11 @@
 			<table>
 				<thead>
 					<tr>
-						<th>StudentID</th>
-						<th>BatchCode</th>
+						<th>Student ID</th>
+						<th>Batch Code</th>
 						<th>Course</th>
-						<th>Name</th>
-						<th>Mobile Number</th>
+						<th>FULL NAME</th>
+						<th>Phone</th>
 						<th>Course Fee</th>
 						<th>Discount</th>
 						<th>Total Fee</th>
