--- a/src/PAGES/addtrainer.html
+++ b/src/PAGES/addtrainer.html
@@ -66,7 +66,7 @@
             <span class="material-icons toggle-icon FInance-toggle">expand_more</span>
         </div>
         <div class="submenu FInance-submenu">
-            <a href="dailypayments.html"><span class="material-icons"><span class="material-symbols-outlined">
+            <a href="batchpayments.html"><span class="material-icons"><span class="material-symbols-outlined">
                         payments
                     </span></span> Batch Payments</a>
             <a href="dailytransactions.html"><span class="material-icons">visibility</span> Daily Payments</a>
