--- a/src/PAGES/batchpayments.html
+++ b/src/PAGES/batchpayments.html
@@ -7,7 +7,7 @@
     <title>Admin Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/dailypayments.css">
+    <link rel="stylesheet" href="../CSS/batchpayments.css">
     <script src="../backend/middleware/tokenvalidity.js"></script>
 
 </head>
@@ -68,7 +68,7 @@
             <span class="material-icons toggle-icon FInance-toggle">expand_more</span>
         </div>
         <div class="submenu FInance-submenu">
-            <a href="dailypayments.html"><span class="material-icons"><span class="material-symbols-outlined">
+            <a href="batchpayments.html"><span class="material-icons"><span class="material-symbols-outlined">
                         payments
                     </span></span> Batch Payments</a>
             <a href="dailytransactions.html"><span class="material-icons">visibility</span> Daily Payments</a>
@@ -102,6 +102,7 @@
                         <th>Course Fee</th>
                         <th>Discount Applied</th>
                         <th>Total Fee</th>
+                        <th>Pay</th>
                         <th>Total Due</th>
                         <th>Action</th>
                     </tr>
@@ -110,10 +111,10 @@
             </table>
         </div>
     </main>
-    
+
     <!-- Modal Styling -->
 
-    <script src="../JS/dailypayments.js"></script>
+    <script src="../JS/batchpayments.js"></script>
 
 </body>
 
