--- a/src/PAGES/updateBatchStatus.html
+++ b/src/PAGES/updateBatchStatus.html
@@ -4,31 +4,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dashboard</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/updateBatchStatus.css">
-    <script src="../JS/updateBatchStatus.js"></script>
-    <title>updateBatchStatus</title>
+
+
 </head>
 
 <body>
-    <div class="wrapper">
-        <h1>Update Batch Status</h1>
-        <form onsubmit="return updateBatchStatus()">
-            <label for="batchCode">Select Batch Code*</label>
-            <select id="batchCode" name="batchCode" required>
-                <option value="">Select Batch</option>
-            </select>
-            <span class="error" id="batchCodeError"></span>
 
-            <label>Status</label>
-            <select id="Status" required>
-                <option value="">Select Status</option>
-                <option value="Active">Active</option>
-                <option value="Inactive">Inactive</option>
-            </select>
+    <!-- Header -->
+    <header class="header">
+        <img src="../img/Medhalogo.png" alt="Medhalogo" width="175">
+        <span class="menu-icon material-icons">menu</span>
+        <div class="profile-icon">
+            <span class="material-icons">account_circle</span>
+            <div class="profile-dropdown">
+                <a href="#"><span class="material-icons">account_circle</span> Profile</a>
+                <a href="#"><span class="material-icons">settings</span> Settings</a>
+                <a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
+            </div>
+        </div>
+    </header>
 
-            <button type="submit">Update Status</button>
-        </form>
-    </div>
+    <!-- Sidebar Navigation -->
+    <nav class="sidebar">
+        <a href="Dashboard.html"><span class="material-icons">dashboard</span> Home</a>
+
+        <div class="dropdown-menu students-menu">
+            <a><span class="material-icons">person</span> Students</a>
+            <span class="material-icons toggle-icon students-toggle">expand_more</span>
+        </div>
+        <div class="submenu students-submenu">
+            <a href="studentform.html"><span class="material-icons">group_add</span> Add Student</a>
+            <a href="viewstudent.html"><span class="material-icons">visibility</span> View Students</a>
+        </div>
+
+        <div class="dropdown-menu Batches-menu">
+            <a><span class="material-icons">group</span> Batches</a>
+            <span class="material-icons toggle-icon Batches-toggle">expand_more</span>
+        </div>
+        <div class="submenu Batches-submenu">
+            <a href="addbatch.html"><span class="material-icons"><span class="material-symbols-outlined">
+                        how_to_reg
+                    </span></span> Add Batches</a>
+            <a href="#"><span class="material-icons">visibility</span> View Batches</a>
+        </div>
+
+        <div class="dropdown-menu trainers-menu">
+            <a><span class="material-icons">group</span> Trainers</a>
+            <span class="material-icons toggle-icon trainers-toggle">expand_more</span>
+        </div>
+        <div class="submenu trainers-submenu">
+            <a href="addtrainer.html"><span class="material-icons"><span class="material-symbols-outlined">
+                        person_add
+                    </span></span> Add Trainer</a>
+            <a href="#"><span class="material-icons">visibility</span> View Trainers</a>
+        </div>
+
+        <div class="dropdown-menu FInance-menu">
+            <a><span class="material-icons">stacked_line_chart</span> FInance</a>
+            <span class="material-icons toggle-icon FInance-toggle">expand_more</span>
+        </div>
+        <div class="submenu FInance-submenu">
+            <a href="dailypayments.html"><span class="material-icons"><span class="material-symbols-outlined">
+                        payments
+                    </span></span> Batch Payments</a>
+            <a href="#"><span class="material-icons">visibility</span> View Trainers</a>
+        </div>
+
+        <a href="#"><span class="material-icons">analytics</span> Analytics</a>
+        <a href="#"><span class="material-icons">notifications</span> Notifications</a>
+        <a href="#"><span class="material-icons">settings</span> Settings</a>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="main-content">
+        <div class="wrapper">
+            <h1>Update Batch Status</h1>
+            <form onsubmit="return updateBatchStatus()">
+                <label for="batchCode">Select Batch Code*</label>
+                <select id="batchCode" name="batchCode" required>
+                    <option value="">Select Batch</option>
+                </select>
+                <span class="error" id="batchCodeError"></span>
+
+                <label>Status</label>
+                <select id="Status" required>
+                    <option value="">Select Status</option>
+                    <option value="Active"></option>
+                    <option value="Inactive">Inactive</option>
+                </select>
+
+                <button type="submit">Update Status</button>
+            </form>
+        </div>
+    </main>
+
+    <!-- Modal Styling -->
+
+    <script src="../JS/updateBatchStatus.js"></script>
+
 </body>
 
 </html>
