updated the code Certificates Upload

--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -170,7 +170,7 @@
 								<th>City</th>
 							</tr>
 						</thead>
-						<tbody id="latestStudents">
+						<tbody id="latestStudents" style="font-size: 12px;">
 							<tr>
 								<td colspan="6">Loading...</td>
 								<!-- The value will be updated dynamically or Ensure default value  -->
@@ -194,7 +194,7 @@
 								<th>City</th>
 							</tr>
 						</thead>
-						<tbody id="latestEnquiries">
+						<tbody id="latestEnquiries" style="font-size: 12px;">
 							<tr>
 								<td colspan="5">Loading...</td>
 								<!-- The value will be updated dynamically or Ensure default value  -->
