--- a/src/PAGES/batchpayments.html
+++ b/src/PAGES/batchpayments.html
@@ -108,7 +108,7 @@
                         <th>Get Terms</th>
                     </tr>
                 </thead>
-                <tbody id="studentTableBody"></tbody>
+                <tbody id="studentTableBody" style="font-size: 12px;"></tbody>
             </table>
         </div>
     </main>
