--- a/src/PAGES/dailytransactions.html
+++ b/src/PAGES/dailytransactions.html
@@ -96,13 +96,12 @@
                     <th>DATE(PAID)</th>
                 </tr>
             </thead>
-            <tbody id="transactionTable">
+            <tbody id="transactionTable" style="font-size: 12px;">
             </tbody>
         </table>
         <div class="btn">
             <button onclick="fetchTransactions('prev')">Previous</button>
             <button onclick="fetchTransactions('next')">Next</button>
-
         </div>
 
     </main>
