--- a/src/PAGES/viewstudent.html
+++ b/src/PAGES/viewstudent.html
@@ -104,7 +104,7 @@
 						<th>Actions</th>
 					</tr>
 				</thead>
-				<tbody id="studentTableBody"></tbody>
+				<tbody id="studentTableBody" style="font-size: 12px;"></tbody>
 			</table>
 		</div>
 	</main>
