--- a/src/PAGES/certificate.html
+++ b/src/PAGES/certificate.html
@@ -10,13 +10,27 @@
 
 <body>
     <div class="container">
-        <h1>Certificate Upload</h1>
+        <h1>Upload Your Certificate</h1>
+
+
         <form id="uploadForm" enctype="multipart/form-data">
-            <input type="text" name="StudentID" placeholder="Student ID" required>
-            <input type="text" name="StudentName" placeholder="Student Name" required>
+            <input type="text" name="StudentID" placeholder="Enter Student ID" required>
+            <input type="text" name="StudentName" placeholder="Enter Student Name" required>
+
             <input type="file" name="Certificate" accept="application/pdf" required>
-            <button type="submit">Upload</button>
+            <button type="submit">Submit Certificate</button>
+
         </form>
+
+        <input type="text" id="searchID" placeholder="Search by Student ID">
+        <button onclick="searchCertificate()">Find Certificate</button>
+
+
+        <div id="certificateView" style="display:none;">
+            <iframe id="pdfViewer" width="100%" height="400px"></iframe>
+            <a id="downloadBtn" target="_blank">Download Certificate</a>
+            <button id="whatsappBtn">Share via WhatsApp</button>
+        </div>
     </div>
 
     <script src="../JS/certificate.js"></script>
