--- a/src/PAGES/search.html
+++ b/src/PAGES/search.html
@@ -35,7 +35,7 @@
                     <th>Actions</th>
                 </tr>
             </thead>
-            <tbody id="studentTableBody">
+            <tbody id="studentTableBody" style="font-size: 12px;">
             </tbody>
         </table>
 
