updated the code batch where active and inactive satus

--- a/src/PAGES/addtrainer.html
+++ b/src/PAGES/addtrainer.html
@@ -49,7 +49,7 @@
             <a href="addbatch.html"><span class="material-icons"><span class="material-symbols-outlined">
                         person_add
                     </span></span> Add Batches</a>
-            <a href="#"><span class="material-icons">visibility</span> View Batches</a>
+            <a href="updateBatchStatus.html"><span class="material-icons">visibility</span> View Batches</a>
         </div>
 
         <div class="dropdown-menu trainers-menu">
