--- a/src/PAGES/updateBatchStatus.html
+++ b/src/PAGES/updateBatchStatus.html
@@ -49,7 +49,7 @@
             <a href="addbatch.html"><span class="material-icons"><span class="material-symbols-outlined">
                         how_to_reg
                     </span></span> Add Batches</a>
-            <a href="#"><span class="material-icons">visibility</span> View Batches</a>
+            <a href="updateBatchStatus.html"><span class="material-icons">visibility</span> View Batches</a>
         </div>
 
         <div class="dropdown-menu trainers-menu">
@@ -83,6 +83,14 @@
     <main class="main-content">
         <div class="wrapper">
             <h1>Update Batch Status</h1>
+            <label>
+                <input type="checkbox" id="activeStatus" checked onclick="loadBatches()"> Active
+            </label>
+            &nbsp;
+            <label>
+                <input type="checkbox" id="inactiveStatus" onclick="loadBatches()"> Inactive
+            </label>
+
             <form onsubmit="return updateBatchStatus()">
                 <label for="batchCode">Select Batch Code*</label>
                 <select id="batchCode" name="batchCode" required>
@@ -93,9 +101,11 @@
                 <label>Status</label>
                 <select id="Status" required>
                     <option value="">Select Status</option>
-                    <option value="Active"></option>
+                    <option value="Active">Active</option>
                     <option value="Inactive">Inactive</option>
                 </select>
+
+
 
                 <button type="submit">Update Status</button>
             </form>
