updated the code batch where active and inactive satus

--- a/src/PAGES/addtrainer.html
+++ b/src/PAGES/addtrainer.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="dropdown-menu Batches-menu">
-            <a><span class="material-icons">group</span> Batches</a>
+            <a href="#"><span class="material-icons">library_books</span> Batches</a>
             <span class="material-icons toggle-icon Batches-toggle">expand_more</span>
         </div>
         <div class="submenu Batches-submenu">
@@ -60,6 +60,16 @@
             <a href="addtrainer.html"><span class="material-icons">add</span> Add Trainer</a>
             <a href="#"><span class="material-icons">visibility</span> View Trainers</a>
         </div>
+
+        <div class="dropdown-menu certificate-menu">
+			<a><span class="material-icons">workspace_premium</span> Certifications</a>
+			<span class="material-icons toggle-icon certificate-toggle">expand_more</span>
+		</div>
+		<div class="submenu certificate-submenu">
+			<a href="certificate.html">
+				<span class="material-icons">military_tech</span> Certificate Add & View
+			</a>
+		</div>
 
         <div class="dropdown-menu FInance-menu">
             <a><span class="material-icons">stacked_line_chart</span> FInance</a>
