--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -42,7 +42,7 @@
 		</div>
 
 		<div class="dropdown-menu Batches-menu">
-			<a><span class="material-icons">group</span> Batches</a>
+			<a href="#"><span class="material-icons">library_books</span> Batches</a>
 			<span class="material-icons toggle-icon Batches-toggle">expand_more</span>
 		</div>
 		<div class="submenu Batches-submenu">
@@ -63,13 +63,23 @@
 			<a href="#"><span class="material-icons">visibility</span> View Trainers</a>
 		</div>
 
+		<div class="dropdown-menu certificate-menu">
+			<a><span class="material-icons">workspace_premium</span> Certifications</a>
+			<span class="material-icons toggle-icon certificate-toggle">expand_more</span>
+		</div>
+		<div class="submenu certificate-submenu">
+			<a href="certificate.html">
+				<span class="material-icons">military_tech</span> Certificate Add & View
+			</a>
+		</div>
+
 		<div class="dropdown-menu FInance-menu">
 			<a><span class="material-icons">stacked_line_chart</span> FInance</a>
 			<span class="material-icons toggle-icon FInance-toggle">expand_more</span>
 		</div>
 		<div class="submenu FInance-submenu">
 			<a href="batchpayments.html"><span class="material-icons"><span class="material-symbols-outlined">
-				payments
+						payments
 					</span></span> Batch Payments</a>
 			<a href="dailytransactions.html"><span class="material-icons">visibility</span> Daily Payments</a>
 		</div>
