--- a/src/PAGES/updateBatchStatus.html
+++ b/src/PAGES/updateBatchStatus.html
@@ -103,7 +103,7 @@
 
             <table>
                 <thead>
-                    <tr>
+                    <tr style="font-size: small;">
                         <th>Batch ID</th>
                         <th>Course Name</th>
                         <th>Duration</th>
