--- a/src/PAGES/viewstudent.html
+++ b/src/PAGES/viewstudent.html
@@ -99,7 +99,7 @@
 				<option value="">Select Batch</option>
 			</select>
 
-			<table>
+			<table  style="font-size: 12px;">
 				<thead>
 					<tr>
 						<th>Student ID</th>
