--- a/src/PAGES/certificate.html
+++ b/src/PAGES/certificate.html
@@ -4,36 +4,131 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dashboard</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/certificate.css">
-    <title>Certificate Upload</title>
+ 
+
 </head>
 
 <body>
-    <div class="container">
-        <h1>Upload Your Certificate</h1>
 
-
-        <form id="uploadForm" enctype="multipart/form-data">
-            <input type="text" name="StudentID" placeholder="Enter Student ID" required>
-            <input type="text" name="StudentName" placeholder="Enter Student Name" required>
-
-            <input type="file" name="Certificate" accept="application/pdf" required>
-            <button type="submit">Submit Certificate</button>
-
-        </form>
-
-        <input type="text" id="searchID" placeholder="Search by Student ID">
-        <button onclick="searchCertificate()">Find Certificate</button>
-
-
-        <div id="certificateView" style="display:none;">
-            <iframe id="pdfViewer" width="100%" height="400px"></iframe>
-            <a id="downloadBtn" target="_blank">Download Certificate</a>
-            <button id="whatsappBtn">Share via WhatsApp</button>
+    <!-- Header -->
+    <header class="header">
+        <img src="../img/Medhalogo.png" alt="Medhalogo" width="175">
+        <span class="menu-icon material-icons">menu</span>
+        <div class="profile-icon">
+            <span class="material-icons">account_circle</span>
+            <div class="profile-dropdown">
+                <a href="#"><span class="material-icons">account_circle</span> Profile</a>
+                <a href="#"><span class="material-icons">settings</span> Settings</a>
+                <a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
+            </div>
         </div>
+    </header>
+
+    <!-- Sidebar Navigation -->
+    <nav class="sidebar">
+
+        <a href="Dashboard.html"><span class="material-icons">dashboard</span> Home</a>
+
+        <div class="dropdown-menu students-menu">
+            <a><span class="material-icons">person</span> Students</a>
+            <span class="material-icons toggle-icon students-toggle">expand_more</span>
+        </div>
+        <div class="submenu students-submenu">
+            <a href="studentform.html"><span class="material-icons">group_add</span> Add Student</a>
+            <a href="viewstudent.html"><span class="material-icons">visibility</span> View Students</a>
+        </div>
+
+        <div class="dropdown-menu Batches-menu">
+            <a href="#"><span class="material-icons">library_books</span> Batches</a>
+            <span class="material-icons toggle-icon Batches-toggle">expand_more</span>
+        </div>
+        <div class="submenu Batches-submenu">
+            <a href="addbatch.html"><span class="material-icons"><span class="material-symbols-outlined">
+                        how_to_reg
+                    </span></span> Add Batches</a>
+            <a href="updateBatchStatus.html"><span class="material-icons">visibility</span> View Batches</a>
+        </div>
+
+        <div class="dropdown-menu trainers-menu">
+            <a><span class="material-icons">group</span> Trainers</a>
+            <span class="material-icons toggle-icon trainers-toggle">expand_more</span>
+        </div>
+        <div class="submenu trainers-submenu">
+            <a href="addtrainer.html"><span class="material-icons"><span class="material-symbols-outlined">
+                        person_add
+                    </span></span> Add Trainer</a>
+            <a href="#"><span class="material-icons">visibility</span> View Trainers</a>
+        </div>
+
+        <div class="dropdown-menu certificate-menu">
+            <a><span class="material-icons">workspace_premium</span> Certifications</a>
+            <span class="material-icons toggle-icon certificate-toggle">expand_more</span>
+        </div>
+        <div class="submenu certificate-submenu">
+            <a href="certificate.html">
+                <span class="material-icons">military_tech</span> Certificate Add & View
+            </a>
+        </div>
+
+        <div class="dropdown-menu FInance-menu">
+            <a><span class="material-icons">stacked_line_chart</span> FInance</a>
+            <span class="material-icons toggle-icon FInance-toggle">expand_more</span>
+        </div>
+        <div class="submenu FInance-submenu">
+            <a href="batchpayments.html"><span class="material-icons"><span class="material-symbols-outlined">
+                        payments
+                    </span></span> Batch Payments</a>
+            <a href="dailytransactions.html"><span class="material-icons">visibility</span> Daily Payments</a>
+        </div>
+
+        <a href="#"><span class="material-icons">analytics</span> Analytics</a>
+        <a href="#"><span class="material-icons">notifications</span> Notifications</a>
+        <a href="#"><span class="material-icons">settings</span> Settings</a>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="main-content">
+
+       <div class="container">
+    <h1>Upload Your Certificate</h1>
+
+    <form id="uploadForm" enctype="multipart/form-data">
+        <div class="form-group">
+            <label for="StudentID">Student ID:</label>
+            <input type="text" id="StudentID" name="StudentID" placeholder="Enter Student ID" required>
+        </div>
+        <div class="form-group">
+            <label for="StudentName">Student Name:</label>
+            <input type="text" id="StudentName" name="StudentName" placeholder="Enter Student Name" required>
+        </div>
+        <div class="form-group">
+            <label for="Certificate">Certificate:</label>
+            <input type="file" id="Certificate" name="Certificate" accept="application/pdf" required>
+        </div>
+        <button type="submit">Submit Certificate</button>
+    </form>
+
+    <div class="search-group">
+        <input type="text" id="searchID" placeholder="Enter Student ID">
+        <button onclick="searchCertificate()">Find Certificate</button>
     </div>
 
+    <div id="certificateView" style="display:none;">
+        <iframe id="pdfViewer" width="100%" height="400px"></iframe>
+        <a id="downloadBtn" target="_blank">Download Certificate</a>
+        <button id="whatsappBtn">Share via WhatsApp</button>
+    </div>
+</div>
+
+
+    </main>
+
     <script src="../JS/certificate.js"></script>
+
 </body>
 
 </html>
