--- a/src/PAGES/dailytransactions.html
+++ b/src/PAGES/dailytransactions.html
@@ -64,14 +64,14 @@
         </div>
 
         <div class="dropdown-menu certificate-menu">
-			<a><span class="material-icons">workspace_premium</span> Certifications</a>
-			<span class="material-icons toggle-icon certificate-toggle">expand_more</span>
-		</div>
-		<div class="submenu certificate-submenu">
-			<a href="certificate.html">
-				<span class="material-icons">military_tech</span> Certificate Add & View
-			</a>
-		</div>
+            <a><span class="material-icons">workspace_premium</span> Certifications</a>
+            <span class="material-icons toggle-icon certificate-toggle">expand_more</span>
+        </div>
+        <div class="submenu certificate-submenu">
+            <a href="certificate.html">
+                <span class="material-icons">military_tech</span> Certificate Add & View
+            </a>
+        </div>
 
         <div class="dropdown-menu FInance-menu">
             <a><span class="material-icons">stacked_line_chart</span> FInance</a>
@@ -91,28 +91,31 @@
 
     <!-- Main Content -->
     <main class="main-content">
-        <h1>Daily Transactions</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>TRANSACTION ID</th>
-                    <th>STUDENT ID</th>
-                    <th>BATCH ID</th>
-                    <th>COURSSE</th>
-                    <th>FULL NAME</th>
-                    <th>PHONE</th>
-                    <th>AMOUNT PAID</th>
-                    <th>TERM</th>
-                    <th>DATE(PAID)</th>
-                </tr>
-            </thead>
-            <tbody id="transactionTable" style="font-size: 12px;">
-            </tbody>
-        </table>
-        <div class="btn">
-            <button onclick="fetchTransactions('prev')">Previous</button>
-            <button onclick="fetchTransactions('next')">Next</button>
+        <div class="wrapper">
+            <h1>Daily Transactions</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>TRANSACTION ID</th>
+                        <th>STUDENT ID</th>
+                        <th>BATCH ID</th>
+                        <th>COURSSE</th>
+                        <th>FULL NAME</th>
+                        <th>PHONE</th>
+                        <th>AMOUNT PAID</th>
+                        <th>TERM</th>
+                        <th>DATE(PAID)</th>
+                    </tr>
+                </thead>
+                <tbody id="transactionTable" style="font-size: 12px;">
+                </tbody>
+            </table>
+            <div class="btn">
+                <button onclick="fetchTransactions('prev')">Previous</button>
+                <button onclick="fetchTransactions('next')">Next</button>
+            </div>
         </div>
+
 
     </main>
 
