updated the code add course field

--- a/src/PAGES/studentform.html
+++ b/src/PAGES/studentform.html
@@ -64,14 +64,14 @@
         </div>
 
         <div class="dropdown-menu certificate-menu">
-			<a><span class="material-icons">workspace_premium</span> Certifications</a>
-			<span class="material-icons toggle-icon certificate-toggle">expand_more</span>
-		</div>
-		<div class="submenu certificate-submenu">
-			<a href="certificate.html">
-				<span class="material-icons">military_tech</span> Certificate Add & View
-			</a>
-		</div>
+            <a><span class="material-icons">workspace_premium</span> Certifications</a>
+            <span class="material-icons toggle-icon certificate-toggle">expand_more</span>
+        </div>
+        <div class="submenu certificate-submenu">
+            <a href="certificate.html">
+                <span class="material-icons">military_tech</span> Certificate Add & View
+            </a>
+        </div>
 
         <div class="dropdown-menu FInance-menu">
             <a><span class="material-icons">stacked_line_chart</span> FInance</a>
@@ -285,6 +285,8 @@
                                 <label for="highestQualification">Highest Qualification *</label>
                                 <select id="highestQualification" name="highestQualification" required>
                                     <option value="">Select Qualification</option>
+                                    <option value="INTERMEDIATE">INTERMEDIATE</option>
+                                    <option value="I.T.I">I.T.I</option>
                                     <option value="DIPLOMA">DIPLOMA</option>
                                     <option value="DEGREE">DEGREE</option>
                                     <option value="B.TECH">B.TECH</option>
