updated the code add course field

--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -42,6 +42,16 @@
 			<a href="viewstudent.html"><span class="material-icons">visibility</span> View Students</a>
 		</div>
 
+		<div class="dropdown-menu courses-menu">
+            <a><span class="material-icons">menu_book</span> Courses</a>
+            <span class="material-icons toggle-icon courses-toggle">expand_more</span>
+        </div>
+        <div class="submenu courses-submenu">
+            <a href="addcourses.html">
+                <span class="material-icons">playlist_add</span> Courses Add & View
+            </a>
+        </div>
+
 		<div class="dropdown-menu Batches-menu">
 			<a href="#"><span class="material-icons">library_books</span> Batches</a>
 			<span class="material-icons toggle-icon Batches-toggle">expand_more</span>
