--- a/src/PAGES/viewstudent.html
+++ b/src/PAGES/viewstudent.html
@@ -41,6 +41,16 @@
 			<a href="viewstudent.html"><span class="material-icons">visibility</span> View Students</a>
 		</div>
 
+		<div class="dropdown-menu courses-menu">
+			<a><span class="material-icons">menu_book</span> Courses</a>
+			<span class="material-icons toggle-icon courses-toggle">expand_more</span>
+		</div>
+		<div class="submenu courses-submenu">
+			<a href="addcourses.html">
+				<span class="material-icons">playlist_add</span> Courses Add & View
+			</a>
+		</div>
+
 		<div class="dropdown-menu Batches-menu">
 			<a href="#"><span class="material-icons">library_books</span> Batches</a>
 			<span class="material-icons toggle-icon Batches-toggle">expand_more</span>
@@ -99,7 +109,7 @@
 				<option value="">Select Batch</option>
 			</select>
 
-			<table  style="font-size: 12px;">
+			<table style="font-size: 12px;">
 				<thead>
 					<tr>
 						<th>Student ID</th>
