--- a/src/index.html
+++ b/src/index.html
@@ -60,15 +60,13 @@
 
                 <li>
                     <a href="PAGES/loginpage.html" class="text-white hover:text-gray-300 ml-4 flex items-center">
-                        <span class="material-symbols-outlined mr-2">login</span> 
+                        <span class="material-symbols-outlined mr-2">login</span>
                         Sign In
                     </a>
                 </li>
-                
             </ul>
         </div>
         <div class="flex items-center">
-
         </div>
     </div>
 
@@ -102,12 +100,12 @@
                 <img src="img/icons8-whatsapp-96.png" alt="WhatsApp" class="h-6 w-6 mr-2"> WhatsApp
             </a>
 
-           <li>
-                    <a href="PAGES/loginpage.html" class="text-white hover:text-gray-300 ml-4 flex items-center">
-                        <span class="material-symbols-outlined mr-2">login</span> 
-                        Sign In
-                    </a>
-                </li>>
+            <li>
+                <a href="PAGES/loginpage.html" class="text-white hover:text-gray-300 ml-4 flex items-center">
+                    <span class="material-symbols-outlined mr-2">login</span>
+                    Sign In
+                </a>
+            </li>>
         </ul>
     </div>
 
@@ -166,6 +164,107 @@
                             </div>
                         </div>
                     </li>
+
+                    <li class="splide__slide">
+                        <div class="bg-gray-100 rounded-lg shadow-lg p-5 course-card">
+                            <div class="flex justify-between items-center mb-4">
+                                <span
+                                    class="bg-yellow-500 text-white text-sm font-semibold px-2 py-1 rounded-full ml-2">Running
+                                    Batch</span>
+                                <span
+                                    class="bg-blue-500 text-white text-sm font-semibold px-2 py-1 rounded-full">Duration:
+                                    60 Days</span>
+                            </div>
+                            <img src="img/webdevelopment.JPG" alt="Java Full Stack Development"
+                                class="w-full h-48 object-cover rounded-lg mb-4">
+                            <h3 class="text-xl font-semibold text-red-600 text-center">
+                                <a href="PAGES/webdevelopment.html">Web Development Full Stack</a>
+                            </h3>
+                            <p class="mt-2 text-gray-700 flex-grow">This course offers comprehensive end-to-end Web
+                                development, including front-end, back-end, and database solutions.</p>
+                            <div class="mt-4 text-center">
+                                <a href="PAGES/webdevelopment.html"
+                                    class="mt-4 inline-block bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-500 transition">Read
+                                    More</a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="splide__slide">
+                        <div class="bg-gray-100 rounded-lg shadow-lg p-5 course-card">
+                            <div class="flex justify-between items-center mb-4">
+                                <span
+                                    class="bg-yellow-500 text-white text-sm font-semibold px-2 py-1 rounded-full ml-2">Running
+                                    Batch</span>
+                                <span
+                                    class="bg-blue-500 text-white text-sm font-semibold px-2 py-1 rounded-full">Duration:
+                                    60 Days</span>
+                            </div>
+                            <img src="img/automationtesting.jpg" alt="Java Full Stack Development"
+                                class="w-full h-48 object-cover rounded-lg mb-4">
+                            <h3 class="text-xl font-semibold text-red-600 text-center">
+                                <a href="PAGES/automationtesting.html">AutoMation testing</a>
+                            </h3>
+                            <p class="mt-2 text-gray-700 flex-grow">This course offers comprehensive end-to-end Web
+                                development, including front-end, back-end, and database solutions.</p>
+                            <div class="mt-4 text-center">
+                                <a href="PAGES/automationtesting.html"
+                                    class="mt-4 inline-block bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-500 transition">Read
+                                    More</a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="splide__slide">
+                        <div class="bg-gray-100 rounded-lg shadow-lg p-5 course-card">
+                            <div class="flex justify-between items-center mb-4">
+                                <span
+                                    class="bg-yellow-500 text-white text-sm font-semibold px-2 py-1 rounded-full ml-2">Running
+                                    Batch</span>
+                                <span
+                                    class="bg-blue-500 text-white text-sm font-semibold px-2 py-1 rounded-full">Duration:
+                                    60 Days</span>
+                            </div>
+                            <img src="img/manualtesting.jpg" alt="Java Full Stack Development"
+                                class="w-full h-48 object-cover rounded-lg mb-4">
+                            <h3 class="text-xl font-semibold text-red-600 text-center">
+                                <a href="PAGES/manualtesting.html">Manual Testing</a>
+                            </h3>
+                            <p class="mt-2 text-gray-700 flex-grow">This course offers comprehensive end-to-end Web
+                                development, including front-end, back-end, and database solutions.</p>
+                            <div class="mt-4 text-center">
+                                <a href="PAGES/manualtesting.html"
+                                    class="mt-4 inline-block bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-500 transition">Read
+                                    More</a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="splide__slide">
+                        <div class="bg-gray-100 rounded-lg shadow-lg p-5 course-card">
+                            <div class="flex justify-between items-center mb-4">
+                                <span
+                                    class="bg-yellow-500 text-white text-sm font-semibold px-2 py-1 rounded-full ml-2">Running
+                                    Batch</span>
+                                <span
+                                    class="bg-blue-500 text-white text-sm font-semibold px-2 py-1 rounded-full">Duration:
+                                    60 Days</span>
+                            </div>
+                            <img src="img/python.JPG" alt="Java Full Stack Development"
+                                class="w-full h-48 object-cover rounded-lg mb-4">
+                            <h3 class="text-xl font-semibold text-red-600 text-center">
+                                <a href="PAGES/python.html">Python Full Stack</a>
+                            </h3>
+                            <p class="mt-2 text-gray-700 flex-grow">This course offers comprehensive end-to-end Web
+                                development, including front-end, back-end, and database solutions.</p>
+                            <div class="mt-4 text-center">
+                                <a href="PAGES/python.html"
+                                    class="mt-4 inline-block bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-500 transition">Read
+                                    More</a>
+                            </div>
+                        </div>
+                    </li>
+
                     <!-- Other course cards remain unchanged -->
                 </ul>
             </div>
