--- a/src/PAGES/batchpayments.html
+++ b/src/PAGES/batchpayments.html
@@ -74,14 +74,14 @@
         </div>
 
         <div class="dropdown-menu certificate-menu">
-			<a><span class="material-icons">workspace_premium</span> Certifications</a>
-			<span class="material-icons toggle-icon certificate-toggle">expand_more</span>
-		</div>
-		<div class="submenu certificate-submenu">
-			<a href="certificate.html">
-				<span class="material-icons">military_tech</span> Certificate Add & View
-			</a>
-		</div>
+            <a><span class="material-icons">workspace_premium</span> Certifications</a>
+            <span class="material-icons toggle-icon certificate-toggle">expand_more</span>
+        </div>
+        <div class="submenu certificate-submenu">
+            <a href="certificate.html">
+                <span class="material-icons">military_tech</span> Certificate Add & View
+            </a>
+        </div>
 
         <div class="dropdown-menu FInance-menu">
             <a><span class="material-icons">stacked_line_chart</span> FInance</a>
@@ -143,6 +143,7 @@
                 <thead>
                     <tr>
                         <th>Term</th>
+                        <th>Name</th>
                         <th>Amount Paid</th>
                         <th>Paid Date</th>
                     </tr>
