get pdf where student id= student data

--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -16,17 +16,36 @@
 
 	<!-- Header -->
 	<header class="header">
-		<img src="../img/Medhalogo.png" alt="Medhalogo" width="175">
-		<span class="menu-icon material-icons">menu</span>
-		<div class="profile-icon">
-			<span class="material-icons">account_circle</span>
-			<div class="profile-dropdown">
-				<a href="#"><span class="material-icons">account_circle</span> Profile</a>
-				<a href="#"><span class="material-icons">settings</span> Settings</a>
-				<a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
+		<!-- Left: Logo -->
+		<div class="logo">
+			<img src="../img/Medhalogo.png" alt="Medhalogo">
+		</div>
+
+		<!-- Right: Menu, Notifications, Profile -->
+		<div class="right-section">
+			<span class="menu-icon material-icons">menu</span>
+
+			<!-- Notification Icon -->
+			<div class="notification-icon">
+				<span class="material-icons">notifications</span>
+				<span class="badge">3</span> <!-- Badge for new notifications -->
+				<div class="notification-dropdown">
+					<p>No new notifications</p>
+				</div>
+			</div>
+
+			<!-- Profile Icon -->
+			<div class="profile-icon">
+				<span class="material-icons">account_circle</span>
+				<div class="profile-dropdown">
+					<a href="#"><span class="material-icons">account_circle</span> Profile</a>
+					<a href="#"><span class="material-icons">settings</span> Settings</a>
+					<a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
+				</div>
 			</div>
 		</div>
 	</header>
+
 
 	<!-- Sidebar Navigation -->
 	<nav class="sidebar">
