get certificate where student id matches

--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -30,10 +30,10 @@
 				<span class="material-icons">notifications</span>
 				<span class="badge">3</span> <!-- Badge for new notifications -->
 				<div class="notification-dropdown">
-					<p>No new notifications</p>
+					<p>Notifications lodging...</p>
 				</div>
 			</div>
-
+			
 			<!-- Profile Icon -->
 			<div class="profile-icon">
 				<span class="material-icons">account_circle</span>
