install the latest bcrypt

--- a/src/PAGES/viewstudent.html
+++ b/src/PAGES/viewstudent.html
@@ -147,14 +147,24 @@
 			</table>
 
 			<!-- Modal -->
-			<div id="certificateModal"
-				style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; max-width: 800px; background: #fff; padding: 20px; border: 1px solid #ddd; border-radius: 10px; box-shadow: 0 8px 16px rgba(0,0,0,0.3); z-index: 1000;">
+			<div id="certificateModal" style="display: none;
+				 position: fixed; top: 50%; left: 50%;
+				 transform: translate(-50%, -50%);
+				 width: 100%; max-width: 800px;
+				 background: #fff; padding: 20px;
+				 border: 1px solid #ddd; border-radius: 10px;
+				 box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+				 z-index: 1000;">
 
-				<div id="modalContent" style="margin-bottom: 15px; text-align: center;"></div>
+				<div id="modalContent" style="margin-bottom: 15px;
+									   text-align: center;"></div>
 
 				<div style="text-align: center;">
-					<button onclick="closeModal()"
-						style="background: #007BFF; color: #fff; padding: 8px 16px; border: none; border-radius: 5px; cursor: pointer;">Close</button>
+					<button onclick="closeModal()" style="background: #007BFF; color: #fff;
+							   padding: 8px 16px;
+							   border: none;
+							   border-radius: 5px;
+							   cursor: pointer;">Close</button>
 				</div>
 			</div>
 
